Enable native access